--- a/StarAlgo.vcxproj
+++ b/StarAlgo.vcxproj
@@ -40,6 +40,7 @@
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <OutDir>$(ProjectDir)bin\</OutDir>
+    <TargetName>$(ProjectName)_d</TargetName>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <OutDir>$(ProjectDir)bin\</OutDir>
@@ -74,16 +75,20 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="Source\AbstractGroup.h" />
+    <ClInclude Include="Source\AbstractOrder.h" />
     <ClInclude Include="Source\ActionGenerator.h" />
     <ClInclude Include="Source\ActionProbabilities.h" />
+    <ClInclude Include="Source\CombatInfo.h" />
     <ClInclude Include="Source\CombatSimDecreased.h" />
+    <ClInclude Include="Source\CombatSimLanchester.h" />
+    <ClInclude Include="Source\CombatSimSustained.h" />
     <ClInclude Include="Source\CombatSimulator.h" />
     <ClInclude Include="Source\EvaluationFunction.h" />
     <ClInclude Include="Source\GameNode.h" />
     <ClInclude Include="Source\GameState.h" />
     <ClInclude Include="Source\Negamax.h" />
     <ClInclude Include="Source\RegionManager.h" />
-    <ClInclude Include="Source\StarAlgoExtra.h" />
     <ClInclude Include="Source\stdafx.h" />
     <ClInclude Include="Source\MCTSCD.h" />
     <ClInclude Include="Source\TargetSorting.h" />
@@ -93,12 +98,13 @@
   <ItemGroup>
     <ClCompile Include="Source\ActionGenerator.cpp" />
     <ClCompile Include="Source\CombatSimDecreased.cpp" />
+    <ClCompile Include="Source\CombatSimLanchester.cpp" />
+    <ClCompile Include="Source\CombatSimSustained.cpp" />
     <ClCompile Include="Source\CombatSimulator.cpp" />
     <ClCompile Include="Source\EvaluationFunction.cpp" />
     <ClCompile Include="Source\GameNode.cpp" />
     <ClCompile Include="Source\GameState.cpp" />
     <ClCompile Include="Source\RegionManager.cpp" />
-    <ClCompile Include="Source\StarAlgoExtra.cpp" />
     <ClCompile Include="Source\stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
